testdata/baselines/reference/submodule/compiler/arrowFunctionWithObjectLiteralBody6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
arrowFunctionWithObjectLiteralBody6.ts(1,16): error TS2304: Cannot find name 'Error'.
arrowFunctionWithObjectLiteralBody6.ts(3,17): error TS2304: Cannot find name 'Error'.
arrowFunctionWithObjectLiteralBody6.ts(7,18): error TS2304: Cannot find name 'Error'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== arrowFunctionWithObjectLiteralBody6.ts (3 errors) ====
    var a = () => <Error>{ name: "foo", message: "bar" };      
                   ~~~~~
!!! error TS2304: Cannot find name 'Error'.
    
    var b = () => (<Error>{ name: "foo", message: "bar" });    
                    ~~~~~
!!! error TS2304: Cannot find name 'Error'.
    
    var c = () => ({ name: "foo", message: "bar" });           
    
    var d = () => ((<Error>({ name: "foo", message: "bar" })));
                     ~~~~~
!!! error TS2304: Cannot find name 'Error'.